--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "metro": "^0.81.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
-    "react": "18.3.1",
+"react": "18.2.0",
+"react-native": "0.72.6"
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
